RESOLVED FIXED94466
Regression(r124945): Build is broken when touch events is disabled
https://bugs.webkit.org/show_bug.cgi?id=94466
Summary Regression(r124945): Build is broken when touch events is disabled
Thiago Marcos P. Santos
Reported 2012-08-20 04:50:21 PDT
"./Tools/Scripts/build-webkit --efl --no-touch-events" is broken.
Attachments
Patch (2.12 KB, patch)
2012-08-20 05:06 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-08-20 05:06:33 PDT
WebKit Review Bot
Comment 2 2012-08-20 05:45:34 PDT
Comment on attachment 159397 [details] Patch Clearing flags on attachment: 159397 Committed r126022: <http://trac.webkit.org/changeset/126022>
WebKit Review Bot
Comment 3 2012-08-20 05:45:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.