Regression(r124945): Build is broken when touch events is disabled https://bugs.webkit.org/show_bug.cgi?id=94466

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-20
Reviewed by Kenneth Rohde Christiansen.

Added missing guards around touch events code.

* ewk/ewk_touch_event.cpp:
* ewk/ewk_touch_event_private.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@126022 bbb929c8-8fbe-4397-9dbb-9b2b20218538