third_party/WebKit/Source/WebKit/efl/ewk/ewk_touch_event.cpp
@@ -26,6 +26,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "config.h"
 
+#if ENABLE(TOUCH_EVENTS)
+
 #include "PlatformTouchPoint.h"
 #include "ewk_touch_event_private.h"
 #include <Ecore_Input.h>
@@ -93,3 +95,5 @@ WebCore::PlatformTouchEvent platformTouchEvent(Evas_Coord x, Evas_Coord y, Eina_
 }
 
 }
+
+#endif // ENABLE(TOUCH_EVENTS)
